Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-31839

SpinBox should not display group separators

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.1.1
    • 5.1.0 RC1
    • Quick: Controls 1
    • None
    • OSX
    • qtquickcontrols/stable: eb27f93781df934dc80e363c26313e1f23638670

    Description

      SpinBox should not display thousands group separators. For example the Finnish locale presents 1000 as "1,000", but SpinBox should still show "1000".

      import QtQuick.Controls 1.0
      
      ApplicationWindow {
          SpinBox {
              value: 1000
              maximumValue: 1000
              anchors.centerIn: parent
          }
      }
      

      Attachments

        For Gerrit Dashboard: QTBUG-31839
        # Subject Branch Project Status CR V

        Activity

          People

            Unassigned Unassigned
            jpnurmi J-P Nurmi
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes