SpinBox: omit group separators

Task-number: QTBUG-31839
Change-Id: I90879cbc116f399f07e2ae53e998253f2e81a5e2
Reviewed-by: Caroline Chao <caroline.chao@digia.com>